--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -42,7 +42,7 @@
                         <a id="navArticle" class="nav-link" href="/home">文章</a>
                     </li>
                     <li class="nav-item">
-                        <a id="navStory" class="nav-link" href="/story/list">故事</a>
+                        <a id="navStory" class="nav-link" href="/story/list/page">故事</a>
                     </li>
                 </ul>
             </div>
