--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -15,22 +15,23 @@
 .width550{width: 55em;}
 .width650{width: 65em;}
 .width700{width: 70em;}
-.maxWidth100{max-width: 10em;}
-.maxWidth150{max-width: 15em;}
-.maxWidth170{max-width: 17em;}
-.maxWidth200{max-width: 20em;}
-.maxWidth300{max-width: 30em;}
-.maxWidth400{max-width: 40em;}
-.maxWidth500{max-width: 50em;}
+.maxWidth100{max-width: 10em !important;}
+.maxWidth150{max-width: 15em !important;}
+.maxWidth170{max-width: 17em !important;}
+.maxWidth200{max-width: 20em !important;}
+.maxWidth300{max-width: 30em !important;}
+.maxWidth400{max-width: 40em !important;}
+.maxWidth500{max-width: 50em !important;}
+.maxWidth550{max-width: 55em !important;}
 .maxWidth600{max-width: 60em !important;}
 .maxWidth650{max-width: 65em !important;}
-.maxWidth700{max-width: 70em;}
-.maxWidth800{max-width: 80em;}
-.maxWidth1000{max-width: 100em;}
-.minWidth100{min-width: 10em;}
-.minWidth200{min-width: 20em;}
-.minWidth300{min-width: 30em;}
-.minWidth400{min-width: 40em;}
+.maxWidth700{max-width: 70em !important;}
+.maxWidth800{max-width: 80em !important;}
+.maxWidth1000{max-width: 100em !important;}
+.minWidth100{min-width: 10em !important;}
+.minWidth200{min-width: 20em !important;}
+.minWidth300{min-width: 30em !important;}
+.minWidth400{min-width: 40em !important;}
 .heightFull{height: 100%;}
 .height10{height: 1em;}
 .height20{height: 2em;}
@@ -65,6 +66,7 @@
 .margin-top20{margin-top: 2em;}
 .margin-top40{margin-top: 4em;}
 .margin-top50{margin-top: 5em;}
+.margin-bottom10{margin-bottom:1em;}
 .margin-bottom20{margin-bottom:2em;}
 .listNoneStyle{list-style: none;}
 .size26{font-size: 2.6em;}
