--- a/src/main/resources/templates/article/userList.html
+++ b/src/main/resources/templates/article/userList.html
@@ -19,7 +19,7 @@
                 </a>
             </div>
             <div class="pull-left padding10">
-               <div class="height50">
+               <div class="minHeight50">
                    <a ng-href="/article/update/{{article.id}}"><h3 ng-bind="article.title"></h3>
                     <p class="text-muted" ng-bind="article.summarize"></p>
                    </a>
