--- a/src/main/resources/templates/story/detail.html
+++ b/src/main/resources/templates/story/detail.html
@@ -11,7 +11,7 @@
 <div th:include="fragment::navbar"></div>
 <div class="container padding-top50 bg-white maxWidth600">
     <div class="text-center">
-        <img th:src="${form.picture}">
+        <img th:src="${form.picture}" class="maxWidth550">
     </div>
     <hr>
     <div class="maxWidth600">
