--- a/src/main/resources/templates/story/userList.html
+++ b/src/main/resources/templates/story/userList.html
@@ -19,7 +19,7 @@
                 </a>
             </div>
             <div class="pull-left padding10">
-               <div class="height50">
+               <div class="minHeight50">
                    <a ng-href="/story/update/{{story.id}}">
                     <p class="text-muted" ng-bind="story.description"></p>
                    </a>
