--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -38,6 +38,8 @@
 .height30{height: 3em;}
 .height40{height: 4em;}
 .height50{height: 5em;}
+.height60{height: 6em;}
+.height70{height: 7em;}
 .height80{height: 8em;}
 .height100{height: 10em;}
 .height110{height: 11em;}
@@ -101,7 +103,9 @@
 .textGrey{color: grey;}
 .textBlack{color: black;}
 .textWhite{color: white;}
+.textWhite2{color: #cac8c2;}
 .borderNone{border: none;}
+.familyS9{font-family:'宋体';font-size: 0.9em;}
 body{
     font-size: 62.5%;
 }
