--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="/static/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/static/js/angular.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/js/common-filters.js"></script>
     <script type="text/javascript" src="/static/js/x0popup.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 </div>
