--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -38,7 +38,7 @@
         <p style="color: #fad6a6;">评论（{{comments.length}}）</p>
         <hr class="bg-faded">
         <div class="bg-white margin-bottom10">
-            <form name="commentForm">
+            <form name="commentForm" ng-if="currentUserId != -1">
                 <div>
                     <textarea rows="3" class="form-control" ng-maxlength="500" placeholder="你的评论……" required
                               ng-model="newComment.content"></textarea>
@@ -49,6 +49,9 @@
                     </button>
                 </div>
             </form>
+            <div class="height50 padding10" ng-if="currentUserId == -1">
+                <p><a href="" ng-click="toLoginPage()"><span class="text-info">登录</span></a> 后可评论</p>
+            </div>
         </div>
         <div ng-repeat="comment in comments track by $index">
             <div class="row" style="margin:1em 0em;padding-bottom:1em;border-bottom: dashed 0.1em #866667;">
@@ -73,7 +76,8 @@
                             <small>{{comment.createdTime | date:'yyyy/MM/dd HH:mm'}}</small>
                         </div>
                         <div style="width: 4em;color: #866667;float: left;cursor: pointer;">
-                            <i class="fa fa-comment-o" ng-click="showReplyForm($event)"></i><span ng-if="comment.replies.length > 0">&nbsp;({{comment.replies.length}})</span>
+                            <i class="fa fa-comment-o" ng-click="showReplyForm($event)"></i><span
+                                ng-if="comment.replies.length > 0">&nbsp;({{comment.replies.length}})</span>
                         </div>
                         <div style="color: #866667;float: left;cursor: pointer;">
                             <i class="fa fa-trash-o" ng-if="currentUserId == comment.user.id"
@@ -128,7 +132,7 @@
                             </div>
                         </div>
                         <div class="margin-top10 reply bg-red" style="display: none;">
-                            <form>
+                            <form ng-if="currentUserId != -1">
                                 <div><textarea rows="3" placeholder="回复内容……" class="form-control"
                                                ng-model="newReply.content"></textarea></div>
                                 <div>
@@ -138,6 +142,9 @@
                                     </button>
                                 </div>
                             </form>
+                            <div class="height50 padding10" ng-if="currentUserId == -1">
+                                <p><a href="" ng-click="toLoginPage()"><span class="text-info">登录</span></a> 后可回复</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -150,7 +157,7 @@
 </body>
 <script type="text/javascript" th:inline="javascript">
     var commentApp = angular.module('commentApp', []);
-    commentApp.controller('commentController', function ($scope, $http) {
+    commentApp.controller('commentController', function ($scope, $http, $location) {
         $scope.comments = [];
         var targetId = [[${form.id}]];
         var targetType = 'ARTICLE';
@@ -262,7 +269,7 @@
             });
         };
 
-        $scope.removeReply = function (replyId, replies,index) {
+        $scope.removeReply = function (replyId, replies, index) {
             x0p('确认删除回复?', null, 'warning', function (button) {
                 if (button == 'warning') {
                     $http.post('/reply/remove/' + replyId).success(function (data) {
@@ -274,6 +281,10 @@
                     });
                 }
             });
+        };
+
+        $scope.toLoginPage = function () {
+            location.href = '/loginPage?needBack=true&backUrl=' + $location.absUrl();
         };
         <!--评论与回复 end-->
     });
